--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "alexa_led"
 version = "0.1.0"
 authors = ["Nate Strandberg <nater540@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 sysfs_gpio   = "0.5"
@@ -19,10 +20,24 @@ serde        = "1.0.85"
 serde_derive = "1.0.85"
 serde_json   = "1.0.37"
 serde_yaml   = "0.8.8"
-uuid         = "0.7.1"
+uuid         = { version = "0.7.1", features = ["serde", "v4"] }
+dotenv       = "0.13.0"
 config       = "0.9.2"
 indoc        = "0.3"
+askama       = "0.7.2"
+bcrypt       = "0.3.0"
+
+# Database
+diesel = { version = "1.4.1", features = ["postgres", "r2d2", "serde_json", "uuid", "chrono"] }
+diesel_migrations = "1.4.0"
+r2d2 = "0.8.3"
 
 # Logging
 fern = "0.5.7"
 log  = "0.4.6"
+
+[build-dependencies]
+askama = "0.7.2"
+
+[profile.release]
+lto = true
